Embedded/Embedded-C/My_workspace/target/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:16:06 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:27:2: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   27 | #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |  ^~~~~~~
arm-none-eabi-gcc -o "task_scheduler.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/arsha/Repos/Courses/Embedded/Embedded-C/My_workspace/target/task_scheduler/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="task_scheduler.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: task_scheduler.elf
 
arm-none-eabi-objdump -h -S  task_scheduler.elf  > "task_scheduler.list"
arm-none-eabi-objcopy  -O binary  task_scheduler.elf  "task_scheduler.bin"
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5228	    112	   1680	   7020	   1b6c	task_scheduler.elf
Finished building: default.size.stdout
 
Finished building: task_scheduler.bin
 
Finished building: task_scheduler.list
 
21:16:10 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5228	    112	   1680	   7020	   1b6c	task_scheduler.elf
Finished building: default.size.stdout
 
21:16:14 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5228	    112	   1680	   7020	   1b6c	task_scheduler.elf
Finished building: default.size.stdout
 
21:18:17 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-gcc "../Src/led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/led.d" -MT"Src/led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/led.o"
arm-none-eabi-gcc -o "task_scheduler.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/arsha/Repos/Courses/Embedded/Embedded-C/My_workspace/target/task_scheduler/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="task_scheduler.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: task_scheduler.elf
 
arm-none-eabi-objdump -h -S  task_scheduler.elf  > "task_scheduler.list"
arm-none-eabi-objcopy  -O binary  task_scheduler.elf  "task_scheduler.bin"
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5208	    112	   1680	   7000	   1b58	task_scheduler.elf
Finished building: default.size.stdout
Finished building: task_scheduler.list
 
 
Finished building: task_scheduler.bin
 
21:20:27 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-gcc "../Src/led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/led.d" -MT"Src/led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/led.o"
../Src/led.c: In function 'led_init_all':
../Src/led.c:23:3: error: 'pGpioOpTypeReg' undeclared (first use in this function)
   23 |  *pGpioOpTypeReg |= ( 1 << (2 * LED_GREEN));
      |   ^~~~~~~~~~~~~~
../Src/led.c:23:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:28: Src/led.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
21:21:00 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-gcc "../Src/led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/led.d" -MT"Src/led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/led.o"
arm-none-eabi-gcc -o "task_scheduler.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/arsha/Repos/Courses/Embedded/Embedded-C/My_workspace/target/task_scheduler/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="task_scheduler.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: task_scheduler.elf
 
arm-none-eabi-objdump -h -S  task_scheduler.elf  > "task_scheduler.list"
arm-none-eabi-objcopy  -O binary  task_scheduler.elf  "task_scheduler.bin"
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5228	    112	   1680	   7020	   1b6c	task_scheduler.elf
Finished building: default.size.stdout
Finished building: task_scheduler.bin
 
 
Finished building: task_scheduler.list
 
21:21:00 **** Incremental Build of configuration Debug for project task_scheduler ****
make -j16 all 
arm-none-eabi-size   task_scheduler.elf 
   text	   data	    bss	    dec	    hex	filename
   5228	    112	   1680	   7020	   1b6c	task_scheduler.elf
Finished building: default.size.stdout
 
